--- a/frontend/resources/styles/main/layouts/library-page.scss
+++ b/frontend/resources/styles/main/layouts/library-page.scss
@@ -26,11 +26,25 @@
 }
 
 .library-content-empty-text {
-    color: #7C7C7C;
+    align-items: center;
     border: 1px dashed #AFB2BF;
-    text-align: center;
-    padding: 5rem;
+    color: #7C7C7C;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 2rem;
+    padding: 5rem;
+    
+    svg {
+        fill: $color-gray-20;
+        height: 30px;
+        margin-bottom: 1rem;
+        width: 30px;
+    }
+    
+    p {
+        text-align: center;
+    }
 }
 
 .library-page #main-bar {
