--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -1000,7 +1000,9 @@ input[type=range]:focus::-ms-fill-upper {
 
 // Messages
 
-.message {
+// Banner top
+
+.msg-banner {
   position: fixed;
   top: 0;
   left: 0px;
@@ -1023,6 +1025,7 @@ input[type=range]:focus::-ms-fill-upper {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    opacity: .5;
 
     svg {
       fill: $color-black;
@@ -1037,28 +1040,42 @@ input[type=range]:focus::-ms-fill-upper {
 
   }
 
-  .message-content {
+  .msg-content {
+    align-items: center;
     color: $color-white;
+    display: flex;
+    justify-content: center;
+    max-width: 60%;
+
+    .icon {
+      display: flex;
+      margin-right: $medium;
+      svg {
+        fill: $color-white;
+        height: 20px;
+        width: 20px;
+      }
+    }
 
     span {
-      font-size: $fs14;
-      max-width: 60%;
+      font-size: $fs15;
     }
   }
 
   &.error {
     background-color: $color-danger;
-    border-color: $color-danger-dark;
   }
 
   &.success {
     background-color: $color-success;
-    border-color: $color-success-dark;
   }
 
+  &.warning {
+    background-color: $color-warning;
+  }
+  
   &.info {
     background-color: $color-info;
-    border-color: $color-info-dark;
   }
 
   &.quick {
